--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>São Paulo FC banbizada 6x1</title>
+    <title>cúrintia gayvotas da fiel</title>
 </head>
 <body>
-    
+    <header> class="cabecalho">
+        <img scr="..." alt="logo marca da loja"
+        class="cabecalho-imagem"
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-intem">Sobre nós</li>
+            <li class="cabecalho-lista-intem">loja</li>
+        </ul>
+    </header>
+    <section id="sobre nós">
+
+    </section>
+
+    <section id="lojas">
+
+    </section>
+
+    <footer class="rodape">
+
+    </footer>
 </body>
 </html>
