--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cúrintia gayvotas da fiel</title>
+    <link rel="stylesheet" href="style.css"
+    <title>Cúrintia gayvotas da fiel</title>
 </head>
 <body>
     <header> class="cabecalho">
         <img scr="..." alt="logo marca da loja"
-        class="cabecalho-imagem"
+class="cabecalho-imagem"
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-intem">Sobre nós</li>
             <li class="cabecalho-lista-intem">loja</li>
         </ul>
     </header>
-    <section id="sobre nós">
-
+    <section class="sobre_nos">
+      <div class="sobre_nos-div-conteudo"
+          <h2 class="sobre_nos-titulo">Sobre nos</h2>
+          <p class="sobre_nos-texto-um"></p>lrem ipsum dolor sit amet. qui possimus magname etfugiat quas in tempore sapee?
+          </p>
+          <p class="sobre_nos-texto-dois">est impedit recusandae c</p>
+            quis vel modi reoudiandae.  Vel autem nostrum 33 veniam
+      </div>
+          </section>
     </section>
 
-    <section id="lojas">
+    <section class="lojas">
 
     </section>
 
