--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header> class="cabecalho">
-        <img scr="curintiagay.jpeg" alt="logo marca da loja"
+        <img scr="curintiagay.png" alt="logo marca da loja"
 class="cabecalho-imagem"
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-intem">Sobre nós</li>
