--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Cúrintia gayvotas da fiel</title>
 </head>
 <body>
-    <header> class="cabecalho">
+    <header> class='cabecalho
         <img scr="gayvotas.png" alt="logo marca da loja"
-        class="cabecalho-imagem"
+        class="cabecalho-imagem">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-intem">Sobre nós</li>
             <li class="cabecalho-lista-intem">loja</li>
