--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <title>Cúrintia gayvotas da fiel</title>
 </head>
 <body>
     <header> class='cabecalho
-        <img scr="gayvotas.png" alt="logo marca da loja"
+        <img src="imagem/gayvotas.png" alt="logo marca da loja"
         class="cabecalho-imagem">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-intem">Sobre nós</li>
@@ -16,7 +16,7 @@
         </ul>
     </header>
     <section class="sobre_nos">
-      <div class="sobre_nos-div-conteudo"
+      <div class="sobre_nos-div-conteudo">
           <h2 class="sobre_nos-titulo">Sobre nos</h2>
           <p class="sobre_nos-texto-um"></p>lrem ipsum dolor sit amet. qui possimus magname etfugiat quas in tempore sapee?
           </p>
