--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="lojas-todosestados-div">
                 <div class="loja-estado">
                     <img src="imagem/gayvotas.png" alt="bandeira do acre" class="lojas-estados-img">
-                    <h3 class="lojas-estado-nome">Acre</h3>
+                    <h3 class="lojas-estado-nome">Gayvotas da fiel</h3>
                     <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
                         <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                     </a>
