--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
                 <div class="lojas-todosestados-div">
                     <div class="loja-estado">
-                        <img src="imagem/gayvotas.png" alt="bandeira do curintia" class="lojas-estados-img">
+                        <img src="curintiaaaaa.jpg" alt="bandeira do curintia" class="lojas-estados-img">
                         <h3 class="lojas-estado-nome">curintia</h3>
                         <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
                             <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone"><section class="lojas">
@@ -33,7 +33,7 @@
                         
                                 <div class="lojas-todosestados-div">
                                     <div class="loja-estado">
-                                        <img src="imagem/gayvotas.png" alt="bandeira do curintia" class="lojas-estados-img">
+                                        <img src="lacraia.jpg" alt="bandeira do curintia" class="lojas-estados-img">
                                         <h3 class="lojas-estado-nome">curintia</h3>
                                         <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
                                             <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone"><section class="lojas">
@@ -58,7 +58,8 @@
 
      </section>
     <footer class="rodape">
-
+        <img src="" alt="imagem do rodapé"> class="rodape-imgem">
+        <h2> class="rodape-titulo">aluno <br>Christiano &reg; </h2>
     </footer>
 </body>
 </html>
