--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header> class='cabecalho
+    <header class='cabecalho'> 
         <img src="imagem/gayvotas.png" alt="logo marca da loja" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-intem">Sobre nós</li>
@@ -23,7 +23,6 @@
 
         </div>
 
-        
 
                 <div class="cada-loja">
                     <img src="lacraia.jpg" alt="bandeira do curintia" class="lojas-estados-img">
