--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="sobre_nos">
 
         <div class="sobre_nos-div-conteudo">
-            <h2 class="sobre_nos-titulo">Sobre nos</h2>
+            <h2 class="sobre_nos-titulo">Sobre torcida</h2>
 
         </div>
 
