--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class='cabecalho'> 
+    <header class='cabecalho'>
         <img src="imagem/gayvotas.png" alt="logo marca da loja" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-intem">Sobre nós</li>
@@ -23,22 +23,24 @@
 
         </div>
 
+    </section>
 
-                <div class="cada-loja">
-                    <img src="lacraia.jpg" alt="bandeira do curintia" class="lojas-estados-img">
-                    <h3 class="lojas-estado-nome">curintia</h3>
-                    <a href="" class="loja-estados-links">
-                        <img src=""  class="lojas-estado-icone">
-                </div>
+    <section class="lojas">
+        <div class="cada-loja">
+            <img src="lacraia.jpg" alt="bandeira do curintia" class="lojas-estados-img">
+            <h3 class="lojas-estado-nome">curintia</h3>
+            <a href="" class="loja-estados-links">
+                <img src="" class="lojas-estado-icone">
+        </div>
 
-                <div class="cada-loja">
-                    <img src="curintiaaaaa.jpg" alt="bandeira do curintia" class="lojas-estados-img">
-                    <h3 class="lojas-estado-nome">curintia</h3>
-                    <a href="" class="loja-estados-links">
-                        <img src=""  class="lojas-estado-icone">
-                </div>
- 
+        <div class="cada-loja">
+            <img src="curintiaaaaa.jpg" alt="bandeira do curintia" class="lojas-estados-img">
+            <h3 class="lojas-estado-nome">curintia</h3>
+            <a href="" class="loja-estados-links">
+                <img src="" class="lojas-estado-icone">
+        </div>
+    </section>
+
 </body>
 
 </html>
-
