--- a/index.html
+++ b/index.html
@@ -5,42 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Cúrintia gayvotas da fiel</title>
+    <title>Açaí</title>
 </head>
 
 <body>
-    <header class='cabecalho'>
-        <img src="imagem/gayvotas.png" alt="logo marca da loja" class="cabecalho-imagem">
+    <header class="cabecalho">
+        <img src="imagem/gayvotas.png" alt="bandeira da tocida" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-intem">Sobre nós</li>
-            <li class="cabecalho-lista-intem">loja</li>
+            <li class="cabecalho-lista-item">Sobre nossa história</li>
+            <li class="cabecalho-lista-item">Lojas</li>
         </ul>
     </header>
+
     <section class="sobre_nos">
-
         <div class="sobre_nos-div-conteudo">
-            <h2 class="sobre_nos-titulo">Sobre torcida</h2>
-
+            <h2 class="sobre_nos-titulo">Sobre nós</h2>
+            <p class="sobre_nos-paragrafo">A torcida orgnizada gayvotas da fel é considerada hoje como a maior torcida organizada do Brasil.
+            </p>
+            <p class="sobre_nos-paragrafo">Gaivotas Fiéis foi um projeto de torcida LGBT, tendo sido fundada pelo jornalista Felipeh Campos.[1][2][3][4] O início do projeto ocorreu em 2011, ganhando mais visibilidade em 2013, após a polêmica do "selinho" envolvendo o jogador Emerson Sheik.[5] O zagueiro Paulo André também se envolveu na discussão, participando de debates sobre o assunto.[6] Em outubro de 2013, a mídia passou a divulgar amplamente a Gaivotas Fiéis e seu criador apareceu em diversos programas de entrevistas.
+            </p>
         </div>
-
+        <img src="curintiaaaaa.jpg" alt="" class="sobre_nos-imagem">
     </section>
 
     <section class="lojas">
-        <div class="cada-loja">
-            <img src="lacraia.jpg" alt="bandeira do curintia" class="lojas-estados-img">
-            <h3 class="lojas-estado-nome">curintia</h3>
-            <a href="" class="loja-estados-links">
-                <img src="" class="lojas-estado-icone">
+        <h2 class="lojas-titulo">Nossas Lojas</h2>
+
+        <div class="lojas-todosestados-div">
+            <div class="loja-estado">Gaivotas Fiéis foi um projeto de torcida LGBT, tendo sido fundada pe jornalista Felipeh Campos.[1][2][3][4] O início do projeto ocorreu em 2011, ganhando mais visibilidade em 2013, após a polêmica do "selinho" envolvendo o jogador Emerson Sheik.[5] O zagueiro Paulo 
+                <img src="lacraia.jpg" alt="torcedor" class="lojas-estados-img">
+                <h3 class="lojas-estado-nome">Acre</h3>
+                <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                </a>
+            </div>
         </div>
 
-        <div class="cada-loja">
-            <img src="curintiaaaaa.jpg" alt="bandeira do curintia" class="lojas-estados-img">
-            <h3 class="lojas-estado-nome">curintia</h3>
-            <a href="" class="loja-estados-links">
-                <img src="" class="lojas-estado-icone">
-        </div>
     </section>
 
+    <footer class="rodape">
+        <img src="imagens/estude.png" alt="Imagem do Rodapé" class="rodape-imagem">
+        <h2 class="rodape-titulo">aluno 2B<br>Christiano &reg; </h2>
+    </footer>
 </body>
 
 </html>
