--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Açaí</title>
+    <title>gayvotas da fiel</title>
 </head>
 
 <body>
@@ -13,7 +13,6 @@
         <img src="imagem/gayvotas.png" alt="bandeira da tocida" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Sobre nossa história</li>
-            <li class="cabecalho-lista-item">Lojas</li>
         </ul>
     </header>
 
@@ -34,9 +33,6 @@
         <div class="lojas-todosestados-div">
             <div class="loja-estado">Gaivotas Fiéis foi um projeto de torcida LGBT, tendo sido fundada pe jornalista Felipeh Campos.[1][2][3][4] O início do projeto ocorreu em 2011, ganhando mais visibilidade em 2013, após a polêmica do "selinho" envolvendo o jogador Emerson Sheik.[5] O zagueiro Paulo 
                 <img src="lacraia.jpg" alt="torcedor" class="lojas-estados-img">
-                <h3 class="lojas-estado-nome">Acre</h3>
-                <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
         </div>
@@ -44,7 +40,6 @@
     </section>
 
     <footer class="rodape">
-        <img src="imagens/estude.png" alt="Imagem do Rodapé" class="rodape-imagem">
         <h2 class="rodape-titulo">aluno 2B<br>Christiano &reg; </h2>
     </footer>
 </body>
