--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
     </section>
 
     <section class="lojas">
-        <h2 class="lojas-titulo">Nossas Lojas</h2>
+        <h2 class="lojas-titulo">presidente da torcida</h2>
 
         <div class="lojas-todosestados-div">
-            <div class="loja-estado">Gaivotas Fiéis foi um projeto de torcida LGBT, tendo sido fundada pe jornalista Felipeh Campos.[1][2][3][4] O início do projeto ocorreu em 2011, ganhando mais visibilidade em 2013, após a polêmica do "selinho" envolvendo o jogador Emerson Sheik.[5] O zagueiro Paulo 
-                <img src="lacraia.jpg" alt="torcedor" class="lojas-estados-img">
+            <div class="loja-estado">
+                <img src="diretor.jpg" alt="presidente" class="lojas-estados-img">Felipeh Campos criou a torcida gay do Corinthians após vivenciar um caso de violência por homofobia. Em entrevista ao Craque Neto, no canal do apresentador da Band no YouTube, Felipeh disse que a ideia nasceu quando seu namorado sofreu agressões na avenida Paulista. E justamente de corintianos.
+
+                “Eu namorava um rapaz e morava na Bela Vista [bairro da região central de São Paulo]. Ele estava indo para minha casa e foi agredido por uma torcida do Corinthians na Paulista. Ele chegou todo machucado. Eu pensei: 'se eu fosse para a imprensa falar que meu namorado tinha sofrido um ataque, eu só estaria dando mais força. Eu falei: 'eu vou montar uma torcida gay do Corinthians'. E pegou”, narrou Felipeh no quadro "10 a 1", em que Neto entrevista personalidades de dentro e fora do universo do futebol.
+                
+                
                 </a>
             </div>
         </div>
