--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="cabecalho">
         <img src="imagem/gayvotas.png" alt="bandeira da tocida" class="cabecalho-imagem">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"></li>
+            <li class="cabecalho-lista-item">..............................</li>
         </ul>
     </header>
 
