--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2 class="sobre_nos-titulo">Sobre nós</h2>
             <p class="sobre_nos-paragrafo">A torcida orgnizada gayvotas da fel é considerada hoje como a maior torcida organizada do Brasil.
             </p>
-            <p class="sobre_nos-paragrafo">Gaivotas Fiéis foi um projeto de torcida LGBT, tendo sido fundada pelo jornalista Felipeh Campos.[1][2][3][4] O início do projeto ocorreu em 2011, ganhando mais visibilidade em 2013, após a polêmica do "selinho" envolvendo o jogador Emerson Sheik.[5] O zagueiro Paulo André também se envolveu na discussão, participando de debates sobre o assunto.[6] Em outubro de 2013, a mídia passou a divulgar amplamente a Gaivotas Fiéis e seu criador apareceu em diversos programas de entrevistas.
+            <p class="sobre_nos-paragrafo">Gaivotas Fiéis foi um projeto de torcida LGBT, tendo sido fundada pelo jornalista Felipeh Campos. O início do projeto ocorreu em 2011, ganhando mais visibilidade em 2013, após a polêmica do "selinho" envolvendo o jogador Emerson Sheik. O zagueiro Paulo André também se envolveu na discussão, participando de debates sobre o assunto. Em outubro de 2013, a mídia passou a divulgar amplamente a Gaivotas Fiéis e seu criador apareceu em diversos programas de entrevistas.
             </p>
         </div>
         <img src="curintiaaaaa.jpg" alt="" class="sobre_nos-imagem">
